# butter-plugin-filesystem

./: CLAUDE.md  README.md  manifest.toml  pyproject.toml
src/butter_plugin_filesystem/: __init__.py  plugin.py
tests/: test_plugin.py
