[project]
name = 'butter-plugin-filesystem'
version = '0.1.0'
description = 'Filesystem plugin for butter-agent — navigate, search, read, edit, write, and (gated) delete files on the local disk.'
readme = 'README.md'
requires-python = '>=3.12'
license = { text = 'MIT' }
authors = [{ name = 'Shane Grech' }]
# No runtime deps — stdlib only (`os`, `pathlib`, `shutil`, `subprocess`,
# `re`, `fnmatch`). ripgrep / fd are used opportunistically *if present on
# PATH* but are not packaged dependencies; a pure-stdlib fallback always
# exists. `butter-agent` is a *dev* dep only (provides the Plugin /
# PluginContext Protocols for typing + the manifest validator for tests);
# plugins do not import butter at runtime.
dependencies = []

[dependency-groups]
dev = [
    'butter-agent',
    'pytest>=8.0',
    'pytest-asyncio>=0.23',
    'ruff>=0.6',
    'mypy>=1.10',
]

[tool.uv.sources]
butter-agent = { path = '../butter-agent', editable = true }

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/butter_plugin_filesystem']

[tool.hatch.build.targets.wheel.force-include]
'manifest.toml' = 'butter_plugin_filesystem/manifest.toml'

[tool.ruff]
line-length = 320
target-version = 'py312'
src = ['src', 'tests']

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'

[tool.ruff.lint]
select = ['E', 'F', 'I', 'UP', 'B', 'SIM', 'RUF']
ignore = []

[tool.ruff.lint.isort]
known-first-party = ['butter_plugin_filesystem']

[tool.mypy]
python_version = '3.12'
strict = true
files = ['src', 'tests']
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = '-ra --strict-markers'
asyncio_mode = 'auto'
